# klearu

./: .gitignore  Cargo.toml  README.md  run-bench.sh
crates/klearu-accel/: Cargo.toml
crates/klearu-core/benches/: benchmarks.rs
crates/klearu-core/src/hash/: minhash.rs
crates/klearu-diffusion/: Cargo.toml  build.rs
crates/klearu-diffusion/src/: blas.rs  config.rs  error.rs  image_io.rs  lib.rs  metal_backend.rs  tokenizer.rs
crates/klearu-diffusion/src/controlnet/: mod.rs
crates/klearu-diffusion/src/layers/: activations.rs  attention.rs  conv2d.rs  group_norm.rs  layer_norm.rs  linear.rs  mod.rs  sample.rs
crates/klearu-diffusion/src/scheduler/: ddim.rs  flow_match.rs  mod.rs
crates/klearu-diffusion/src/text_encoder/: mod.rs  t5.rs
crates/klearu-diffusion/src/unet/: blocks.rs  flux.rs  mod.rs  resnet_block.rs  text_time_embedding.rs  time_embedding.rs  transformer_2d.rs
crates/klearu-diffusion/src/vae/: mod.rs
crates/klearu-diffusion/src/weight/: flux_checkpoint.rs  inventory.rs  load_helpers.rs  loader.rs  mod.rs  single_file.rs
crates/klearu-dpf/: Cargo.toml
crates/klearu-dpf/src/: dcf.rs  dpf.rs
crates/klearu-image/: Cargo.toml
crates/klearu-image/src/: backward.rs  checkpoint.rs  distributed.rs  error.rs  grad.rs  lib.rs  model.rs  moe.rs  optim.rs  planner.rs  sample.rs  sparse_attention.rs  tokenizer.rs  train.rs
crates/klearu-llm/: Cargo.toml
crates/klearu-llm/benches/: llm_inference.rs
crates/klearu-llm/src/: config.rs  lib.rs  vlm.rs
crates/klearu-llm/src/generate/: mod.rs  pipeline.rs  sparse_pipeline.rs
crates/klearu-llm/src/model/: attention.rs  block.rs  embedding.rs  gated_deltanet.rs  kv_cache.rs  linear.rs  mlp.rs  mod.rs  rms_norm.rs  rope.rs
crates/klearu-llm/src/sparse/: calibrate.rs  mod.rs  predictor_store.rs  sparse_attention.rs  sparse_mlp.rs
crates/klearu-llm/src/weight/: loader.rs  name_map.rs
crates/klearu-mpc/: Cargo.toml
crates/klearu-mpc/src/: activation.rs  attention_mpc.rs  embedding_pir.rs  fixed_point.rs  lib.rs  linear.rs  multiply.rs  normalization.rs  transport.rs
crates/klearu-private/: Cargo.toml
crates/klearu-private/src/: ferret_triples.rs  lib.rs  oprf.rs  private_attention.rs  private_block.rs  private_conv2d.rs  private_convnext.rs  private_davit.rs  private_eva02.rs  private_hiera.rs  private_mlp.rs  private_model.rs  private_pipeline.rs  private_qwen_vision.rs  private_swin.rs  private_vision_helpers.rs  private_vit.rs  tcp_transport.rs
crates/klearu-server/: Cargo.toml
crates/klearu-server/src/: api.rs  main.rs  session.rs  two_party.rs  ws.rs
crates/klearu-vision/: Cargo.toml
crates/klearu-vision/src/: config.rs  error.rs  lib.rs  preprocess.rs  tta.rs
crates/klearu-vision/src/layers/: conv2d.rs  cross_attention.rs  gelu.rs  grn.rs  layer_norm.rs  layer_scale.rs  linear_bias.rs  mod.rs  patch_merge.rs  quantized_linear.rs  rope2d.rs  swiglu_mlp.rs
crates/klearu-vision/src/model/: channel_attention.rs  classification_head.rs  convnext.rs  cpe.rs  davit_block.rs  davit_stage.rs  eva02.rs  hiera.rs  mod.rs  patch_embed.rs  qwen_vision.rs  swin.rs  vit.rs  window_attention.rs
crates/klearu-vision/src/sparse/: calibrate.rs  mod.rs  predictor_store.rs  sparse_attention.rs  sparse_convnext.rs  sparse_eva02.rs  sparse_hiera.rs  sparse_mlp.rs  sparse_qwen_vision.rs  sparse_swin.rs  sparse_vit.rs
crates/klearu-vision/src/weight/: convnext_loader.rs  dinov2_loader.rs  eva02_loader.rs  florence2_loader.rs  hiera_loader.rs  loader.rs  mod.rs  name_map.rs  qwen_vision_loader.rs  siglip_loader.rs  swin_loader.rs  vit_loader.rs
crates/klearu-vision/tests/: model_loading.rs
crates/klearu-wasm/: Cargo.toml
crates/klearu-wasm/src/: lib.rs  wasm_party.rs  wasm_transport.rs
