[package]
name = "klearu-diffusion"
description = "Stable Diffusion checkpoint loading + inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[features]
default = []
cli = ["dep:image"]
# Use Apple Accelerate.framework (cblas_sgemm + AMX coprocessor) on macOS for
# the absolute best M1/M2/M3 performance. Default `matrixmultiply` path also
# works on M-series via NEON; this feature buys roughly an extra 2-3× on AMX.
accelerate = ["dep:accelerate-src"]
# Metal GPU backend: route sgemm through a Metal compute pipeline. macOS only.
# Currently uses a tiled MSL sgemm kernel; will not beat Accelerate (which
# uses AMX) for matrixes that fit AMX's window. Useful for very large matmuls
# and as a foundation for future MPS/MPSGraph integration.
metal = ["dep:metal", "dep:objc2", "dep:objc2-foundation"]

[dependencies]
klearu-core = { workspace = true }
klearu-accel = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

safetensors = "0.4"
memmap2 = "0.9"
half = { workspace = true }
image = { version = "0.25", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
matrixmultiply = "0.3"
rayon = "1"
accelerate-src = { version = "0.3", optional = true }
metal = { version = "0.29", optional = true }
objc2 = { version = "0.5", optional = true, features = ["exception"] }
objc2-foundation = { version = "0.2", optional = true }

[[bin]]
name = "sd_inventory"
path = "src/bin/sd_inventory.rs"

[[bin]]
name = "sd_generate"
path = "src/bin/sd_generate.rs"
required-features = ["cli"]
