[package]
name = "klearu-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for klearu-mpc 2PC operations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
klearu-mpc = { workspace = true, default-features = false }
klearu-llm = { path = "../klearu-llm", default-features = false }
klearu-private = { path = "../klearu-private", default-features = false }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
rand = { workspace = true }
serde_json = { workspace = true }
